--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
             <img src="./sun.png" width="100%" height="100px">
         </div>
         <div class="flag">
-            <img src="./fg.png" alt="flag" width="60px" height="60px">
+            <img src="./Tiranga1.svg" alt="flag" width="60px" height="60px">
         </div>
         <div class="car">
             <img src="./car.png" width="400px" height="200px">
